optimization to max likelihood genotyper, compute reference phylo leaf node ancestor alignments once before looping over query results.