@@ -1,6 +1,7 @@
 #!/bin/bash
 
 remoteDebug="true"
+verboseGC="true"
 localConfig="false"
 remargs=()
 
@@ -38,5 +39,12 @@ then
     export GLUE_DEBUG_OPTS="-agentlib:jdwp=transport=dt_socket,server=y,address=8000,suspend=n"
 fi
 
+export GLUE_VERBOSE_GC_OPTS=""
+if [ $verboseGC == "true" ]
+then
+    echo "Verbose GC switched on."
+    export GLUE_VERBOSE_GC_OPTS="-XX:+PrintGC"
+fi
+
 (cd ${GLUETOOLS_HOME} ; gradle --quiet jar)
-java ${GLUE_DEBUG_OPTS} -jar ${GLUETOOLS_HOME}/build/libs/gluetools-core-${GLUETOOLS_VERSION}.jar -c ${GLUETOOLS_CONFIG_XML} "${remargs[@]}"
+java ${GLUE_DEBUG_OPTS} ${GLUE_VERBOSE_GC_OPTS} -jar ${GLUETOOLS_HOME}/build/libs/gluetools-core-${GLUETOOLS_VERSION}.jar -c ${GLUETOOLS_CONFIG_XML} "${remargs[@]}"
